--- a/CSSassessment2.css
+++ b/CSSassessment2.css
@@ -77,7 +77,7 @@ body {
     padding-bottom: 2px;
   }
   
-  .Exiciting-offer {
+  .Circle {
     margin: 200px 0 50px 0;
     display: flex;
     flex-flow: wrap;
