--- a/CSSassessment5.css
+++ b/CSSassessment5.css
@@ -148,7 +148,7 @@ body{
 .class7{
     height: 100px;
     width: 100px;
-    background-color: tomato;
+    background-color: rgb(245, 120, 199);
     border: 1px solid;
     transition-property: width;
     transition-duration: 4s;
@@ -162,7 +162,7 @@ body{
 .class8{
     height: 100px;
     width: 100px;
-    background-color: tomato;
+    background-color: rgb(245, 120, 199);
     border: 1px solid;
     transition-property: all;
     transition-duration: 4s;
@@ -176,7 +176,7 @@ body{
 .class9{
     height: 100px;
     width: 100px;
-    background-color: tomato;
+    background-color: rgb(245, 120, 199);
     border: 1px solid;
     transition-property: width;
     transition-duration: 2s;
